--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,3 @@
-<header>
-  <mat-toolbar>
-  <span>AL-KHWARIZMI</span>
-  <span class="toolbar-spacer"></span>
-  <div>
-    <p class="user-account">
-      <button mat-mini-fab class="toolbar-button">
-          <span>HA</span>
-        </button>
-      Hamza Ayyad 
-      <span class="material-icons">arrow_drop_down</span>
-    </p>
-  </div>
-  <span style="margin:10px;">|</span>
-  <span class="user-account">English</span>
-</mat-toolbar>
-</header>
+<app-header></app-header>
 
-<div class="cards-container" fxLayout="row wrap" fxLayoutAlign="space-between start">
-
-   <p fxFlex="100%" class="info-tip"><fa-icon class="info-color" [icon]="circleInfo"></fa-icon>
-  <span class="info-color"> Information:</span> Select Template to Continue 
-  </p><mat-icon class="x-mark info-color">close</mat-icon>
-
-  <mat-tab-group [color]="'accent'">
-    <mat-tab label="Published"></mat-tab>
-    <mat-tab label="Expired"></mat-tab>
-    <mat-tab label="Closed"></mat-tab>
-    <mat-tab label="All Surveys"></mat-tab>
-  </mat-tab-group>
-
-  
-  <span style="margin-right: 7px;">
-    <button mat-raised-button [color]="'accent'">Go to Dashboard</button>
-    <!-- <mat-form-field style="font-size: 10px;"> 
-      <input mat-input placeholder="Search">
-    </mat-form-field> -->
-  </span>
-
-
-  <div fxLayout="row wrap" fxLayoutGap="5px grid">
-    <div fxFlex="25%" *ngFor="let num of [1,2,3,4,5,6]">
-      <app-card-item class="card"></app-card-item>
-    </div>
-  </div>
-
-</div>
+<app-main></app-main>
