--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,1 +1,7 @@
-<p>card-list works!</p>
+<div class="card-list-container" fxLayout="row wrap">
+<div fxLayout="row wrap" *ngFor="let survey of surveys" fxLayoutGap="13px  grid">
+    <div fxFlex="25%">
+      <app-card-item [surveyItem]="survey"></app-card-item>
+    </div>
+  </div>
+</div>
