--- a/src/app/card-list/card-item/card-item.component.css
+++ b/src/app/card-list/card-item/card-item.component.css
@@ -4,12 +4,12 @@
     margin-bottom:10px ;
 }
 
-.card-publish {
+.card-Published {
     text-align: center;
     border-top: 5px solid rgb(102, 202, 155);
 }
 
-.card-publish:hover {
+.card-Published:hover {
     border-bottom: 2px solid rgb(102, 202, 155);
     border-left: 2px solid rgb(102, 202, 155);
     border-right: 2px solid rgb(102, 202, 155);
@@ -17,24 +17,46 @@
     cursor: pointer;
 }
 
-.card-expired {
+.card-Published-active {
+    border-bottom: 2px solid rgb(102, 202, 155);
+    border-left: 2px solid rgb(102, 202, 155);
+    border-right: 2px solid rgb(102, 202, 155);
+    transition: all 90ms linear;
+}
+
+.card-Expired {
     text-align: center;
     border-top: 5px solid grey;
 }
 
-.card-expired:hover {
+.card-Expired:hover {
     border-bottom: 2px solid grey;
     border-left: 2px solid grey;
     border-right: 2px solid grey;
     transition: all 90ms linear;
     cursor: pointer;
 }
-.card-closed {
+
+.card-Expired-active {
+    border-bottom: 2px solid grey;
+    border-left: 2px solid grey;
+    border-right: 2px solid grey;
+    transition: all 90ms linear;
+}
+
+.card-Closed {
     text-align: center;
     border-top: 5px solid grey;
 }
 
-.card-closed:hover {
+.card-Closed:hover {
+    border-bottom: 2px solid grey;
+    border-left: 2px solid grey;
+    border-right: 2px solid grey;
+    transition: all 90ms linear;
+}
+
+.card-Closed-active {
     border-bottom: 2px solid grey;
     border-left: 2px solid grey;
     border-right: 2px solid grey;
