--- a/src/app/nav-elements/nav-elements.component.css
+++ b/src/app/nav-elements/nav-elements.component.css
@@ -1,5 +1,6 @@
 .nav-container {
     background-color: white;
+    margin: 5px;
   }
 
 .info-tip {
@@ -14,7 +15,7 @@
 
   .x-mark {
     position: absolute;
-    right: 25px;
+    right: 30px;
     margin-top: 15px;
   }
 
@@ -44,6 +45,32 @@
     font-weight: 400;
     color: rgb(102, 202, 155) !important;
     border: 1px solid rgb(102, 202, 155);
+  }
+
+  .view-icons {
+    display: flex;
+    justify-content: flex-end;
+    margin: -17px 25px 10px 25px;
+  }
+
+  .view-icons mat-icon {
+    padding: 1px;
+    border-radius: 2px;
+  }
+
+  .view-icon-not-active {
+    background-color: white;
+    color: lightgrey;
+    border: 1px solid lightgrey;
+  }
+
+  .view-icon-active {
+    background-color: black;
+    color: white;
+  }
+
+  .view-icons .mat-icon-button {
+    margin-right: -7px !important;
   }
 
   ::ng-deep .mat-tab-body-content {
