--- a/src/app/card-list/card-item/card-item.component.css
+++ b/src/app/card-list/card-item/card-item.component.css
@@ -54,6 +54,7 @@
     border-left: 2px solid grey;
     border-right: 2px solid grey;
     transition: all 90ms linear;
+    cursor: pointer;
 }
 
 .card-Closed-active {
@@ -69,7 +70,9 @@
     margin-top: 5px;
 }
 .survey-periods {
-    height: 45px;
+    height: 42px;
+    margin-top: -10px;
+    text-align: center;
 }
 
 ::ng-deep .mat-form-field-underline {
