--- a/src/app/card-list/card-item/card-item.component.html
+++ b/src/app/card-list/card-item/card-item.component.html
@@ -7,7 +7,8 @@
     
     <mat-card-title>
         <ng-container [ngSwitch]="surveyItem.SURVEY_STATUS_EN">
-            <fa-icon *ngSwitchCase="'Published'" [icon]="faCheck" style="color:rgb(102, 202, 155)"></fa-icon>
+            <fa-icon *ngSwitchCase="'Published'" [icon]="faCheck" 
+            style="color:rgb(102, 202, 155)"></fa-icon>
             <mat-icon *ngSwitchCase="'Expired'" style="color: grey;">alarm</mat-icon>
             <mat-icon *ngSwitchCase="'Closed'" style="color: grey;">lock</mat-icon>
         </ng-container>
@@ -17,18 +18,22 @@
     <mat-card-content>{{surveyItem.SurveyName}}</mat-card-content>
 </div>
     <mat-card-footer style="border-top: 1px solid lightgrey;">
-        <mat-form-field  
+        <mat-form-field   *ngIf="periodsCount > 1; else onePeriod"
          [color]="'accent'" 
          [floatLabel]="'never'"
-         style="text-align: center; height: 45px;">
+         class="survey-periods">
             <mat-select placeholder="Select Period">
                 <div>
-                <mat-option *ngFor="let surveyPeriod of surveyPeriods" 
+                <mat-option *ngFor="let surveyPeriod of surveyItem.SurveyPeriods" 
                 [value]="surveyPeriod.START_DATE - surveyPeriod.END_DATE">
                     {{surveyPeriod.START_DATE | date:'dd/MM/yyyy'}} - {{surveyPeriod.END_DATE | date:'dd/MM/yyyy'}}
                 </mat-option>
             </div>
         </mat-select>
     </mat-form-field>
+    <ng-template #onePeriod>
+        <p class="surv-period">{{surveyItem.SurveyPeriods[0].START_DATE | date:'dd/MM/yyyy'}} - 
+            {{surveyItem.SurveyPeriods[0].END_DATE | date:'dd/MM/yyyy'}}</p>
+    </ng-template>
     </mat-card-footer>
 </mat-card>
