--- a/src/app/nav-elements/nav-elements.component.html
+++ b/src/app/nav-elements/nav-elements.component.html
@@ -13,7 +13,8 @@
     
     
     <span style="margin-right: 15px; margin-top: -5px;">
-      <button mat-raised-button [color]="'accent'">Go to Dashboard</button>
+      <button mat-raised-button [color]="'accent'" [disabled]="dashboardBtnState"
+      (click)="openDashboardDialog()">Go to Dashboard</button>
       <div style="display: inline;">
         <input type="text" name="search" id="search" placeholder="Search survey name">
         <mat-icon class="search-icon">search</mat-icon>
