--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,6 @@
 <div class="cards-container">
-    <app-nav-elements></app-nav-elements>
+    <app-nav-elements (onToggleView)="toggleView($event)"></app-nav-elements>
     
-    <app-card-list></app-card-list>
+    <app-card-grid *ngIf="viewType === 'grid'"></app-card-grid>
+    <app-card-table *ngIf="viewType === 'list'"></app-card-table>
 </div>
