--- a/src/app/cards/card-table/card-table.component.html
+++ b/src/app/cards/card-table/card-table.component.html
@@ -20,7 +20,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>From</th>
             <td mat-cell *matCellDef="let row">
                 <span *ngIf="row.SurveyPeriods.length === 1">
-                    {{row.SurveyPeriods[0].START_DATE | date:'dd/MM/yyyy'}}</span>
+                    {{row.SurveyPeriods[0].START_DATE}}</span>
             </td>
         </ng-container>
 
@@ -28,7 +28,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
             <td mat-cell *matCellDef="let row">
                 <span *ngIf="row.SurveyPeriods.length === 1">
-                    {{row.SurveyPeriods[0].END_DATE | date:'dd/MM/yyyy'}}</span>
+                    {{row.SurveyPeriods[0].END_DATE}}</span>
             </td>
         </ng-container>
 
@@ -40,7 +40,7 @@
                     <mat-select placeholder="Select Period" style="min-width: 100px"
                         (selectionChange)="choosePeriod($event.value, row)">
                         <mat-option *ngFor="let period of row.SurveyPeriods" [value]="period">
-                            {{period.START_DATE | date:'dd/MM/yyyy'}} - {{period.END_DATE | date:'dd/MM/yyyy'}}
+                            {{period.START_DATE}} - {{period.END_DATE}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
