--- a/src/app/nav-elements/nav-elements.component.css
+++ b/src/app/nav-elements/nav-elements.component.css
@@ -1,6 +1,7 @@
 .nav-container {
   background-color: white;
   margin: 5px;
+  position: relative;
 }
 
 .info-tip {
@@ -45,6 +46,25 @@
   font-weight: 400;
   color: rgb(102, 202, 155) !important;
   border: 1px solid rgb(102, 202, 155);
+}
+
+.filter-menu {
+  background: white;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  width: 250px;
+  height: 235px;
+  margin-left: 150px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  z-index: 10;
+}
+
+.filter-options {
+  margin-right: 10px;
 }
 
 .view-icons {
