--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <mat-toolbar>
+  <mat-toolbar [ngClass]="{'fs-lg':textBtnState}">
     <span>AL-KHWARIZMI</span>
     <span class="toolbar-spacer"></span>
     <div>
