--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="cards-container">
+<div class="cards-container cards-container-dark">
     <app-nav-elements (onToggleView)="toggleView($event)"></app-nav-elements>
 
     <app-cards [viewTypes]="viewType"></app-cards>
