--- a/src/app/nav-elements/dashboard-dialog/dashboard-dialog.component.html
+++ b/src/app/nav-elements/dashboard-dialog/dashboard-dialog.component.html
@@ -1,9 +1,10 @@
 <h1 mat-dialog-title>Survey:</h1>
 
+<div [ngClass]="{'dialog-lg':textBtnState}">
 <div mat-dialog-content>
 
   <p>Data to send back</p>
-  <mat-form-field appearance="outline" style="width: 250px;">
+  <mat-form-field appearance="outline" style="width: 100%;" >
     <mat-label>Data</mat-label>
     <input matInput minlength="4" [(ngModel)]="dialogName" (keydown)="surveyNameCheck($event)">
     <mat-hint class="mat-error" *ngIf="hasError">Name must be english and at least 4 letters</mat-hint>
@@ -11,6 +12,7 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="dialogName" cdkFocusInitial>Ok</button>
+  <button [ngClass]="{'dialog-lg': textBtnState}" mat-button (click)="onNoClick()">No Thanks</button>
+  <button [ngClass]="{'dialog-lg': textBtnState}" mat-button [mat-dialog-close]="dialogName" cdkFocusInitial>Ok</button>
+</div>
 </div>
