Tuesday 18/10-work-task-stop

--- a/src/app/nav-elements/nav-elements.component.css
+++ b/src/app/nav-elements/nav-elements.component.css
@@ -71,7 +71,8 @@
 }
 
 .filter-menu {
-  background-color: white;
+  background-color: #3a3a3a;
+  color: white;
   border-radius: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
